<resources>
    <string name="app_name">AL-chan</string>
    <string name="home">Home</string>
    <string name="anime">Anime</string>
    <string name="manga">Manga</string>
    <string name="social">Social</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="hello">Hello!</string>
    <string name="seasonal">Seasonal</string>
    <string name="explore">Explore</string>
    <string name="reviews">Reviews</string>
    <string name="calendar">Calendar</string>
    <string name="trending_anime_right_now">Trending Anime Right Now</string>
    <string name="trending_manga_right_now">Trending Manga Right Now</string>
    <string name="powered_by_anilist">Powered by AniList</string>
    <string name="welcome_to_al_chan">Welcome to AL-chan</string>
    <string name="al_chan_is_an_unofficial_client_for_anilist_a_place_where_you_can_track_share_discover_and_experience_anime_manga"><![CDATA[AL-chan is an unofficial client for AniList, a place where you can track, share, discover, and experience Anime & Manga.]]></string>
    <string name="get_started">Get Started</string>
    <string name="back">Back</string>
    <string name="important_to_know">Important to Know</string>
    <string name="you_ll_be_redirected_to_anilist_co_to_login_register_make_sure_the_url_is_anilist_co_before_entering_your_email_and_password">You\'ll be redirected to anilist.co to login/register. Make sure the URL is anilist.co before entering your email and password.</string>
    <string name="login">Login</string>
    <string name="login_as_guest">Login as Guest</string>
    <string name="register">Register</string>
    <string name="please_wait">Please Wait</string>
    <string name="you_are_currently_not_logged_in_you_need_to_login_to_use_all_the_available_features">You are currently not logged in. You need to login to use all the available features.</string>
    <string name="go_to_login_page">Go to Login Page</string>
    <string name="follow">Follow</string>
    <string name="mutual">Mutual</string>
    <string name="follows_you">Follows You</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="bio">Bio</string>
    <string name="favorites">Favorites</string>
    <string name="stats">Stats</string>
    <string name="activities">Activities</string>
    <string name="anime_tendencies">Anime Tendencies</string>
    <string name="manga_tendencies">Manga Tendencies</string>
    <string name="seems_to_love_x">Seems to love %1$s</string>
    <string name="seems_to_hate_x">Seems to hate %1$s</string>
    <string name="tends_to_like_x">Tends to like %1$s</string>
    <string name="love_x_series">Love %1$s series</string>
    <string name="first_recorded_watching_anime_in_x">First recorded watching Anime in %1$s</string>
    <string name="first_recorded_reading_manga_in_x">First recorded reading Manga in %1$s</string>
    <string name="ends_up_completing_x_of_anime_started">Ends up completing %1$s of Anime started</string>
    <string name="ends_up_completing_x_of_manga_started">Ends up completing %1$s of Manga started</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="view_on_anilist">View on AniList</string>
    <string name="share_profile">Share Profile</string>
    <string name="copy_link">Copy Link</string>
    <string name="add_as_best_friend">Add as Best Friend</string>
    <string name="app_settings">App Settings</string>
    <string name="personalise_al_chan_to_suit_your_taste">Personalise AL-chan to suit your taste</string>
    <string name="anilist_settings">AniList Settings</string>
    <string name="modify_anilist_settings">Modify AniList settings</string>
    <string name="list_settings">List Settings</string>
    <string name="configure_your_lists">Configure your lists</string>
    <string name="notifications_settings">Notifications Settings</string>
    <string name="set_how_you_want_to_be_notified">Set how you want to be notified</string>
    <string name="account_settings">Account Settings</string>
    <string name="manage_your_account">Manage your account</string>
    <string name="about_al_chan">About AL-chan</string>
    <string name="know_more_about_al_chan">Know more about AL-chan</string>
    <string name="theme">Theme</string>
    <string name="selected_theme">Selected theme</string>
    <string name="save_changes">Save Changes</string>
    <string name="reset_to_default">Reset to Default</string>
    <string name="appearance">Appearance</string>
    <string name="list">List</string>
    <string name="quot_all_quot_anime_list_position">\"All\" Anime list position</string>
    <string name="quot_all_quot_manga_list_position">\"All\" Manga list position</string>
    <string name="naming">Naming</string>
    <string name="use_relative_date_for_next_airing_episode">Use relative date for next airing episode</string>
    <string name="display_japanese_staff_name">Display Japanese staff name</string>
    <string name="display_japanese_media_title">Display Japanese media title</string>
    <string name="display_korean_media_title">Display Korean media title</string>
    <string name="display_chinese_media_title">Display Chinese media title</string>
    <string name="display_taiwanese_media_title">Display Taiwanese media title</string>
    <string name="top_of_the_list">Top of the list</string>
    <string name="bottom_of_the_list">Bottom of the list</string>
    <string name="use_circular_avatar_for_profile">Use circular avatar for Profile</string>
    <string name="show_dub_text_if_available">Show [DUB] tag if available</string>
    <string name="dub_settings">Dub</string>
    <string name="clear_anime_dubs_cache">Clear Anime Dubs Cache</string>
    <string name="force_refresh_anime_dubs">Force Refresh Dub Status</string>
    <string name="anime_dubs_cache_cleared">Anime Dubs cache cleared</string>
    <string name="anime_dubs_status_refreshed">Anime Dubs status refreshed</string>
    <string name="show_recent_reviews_at_home">Show Recent Reviews at Home</string>
    <string name="follow_anilist_setting">Follow AniList setting</string>
    <string name="native_name">Native name (ex: 初音ミク, 宮崎駿, 花澤香菜)</string>
    <string name="use_staff_first_middle_last_name_format">Use First Middle Last name format (ex: Miku Hatsune, Hayao Miyazaki, Kana Hanazawa)</string>
    <string name="use_staff_last_middle_first_name_format">Use Last Middle First name format (ex: Hatsune Miku, Miyazaki Hayao, Hanazawa Kana)</string>
    <string name="use_media_english_name_format">Use English name (ex: Attack on Titan, Solo Leveling, The King\'s Avatar)</string>
    <string name="use_media_romaji_name_format">Use Romaji name (ex: Shingeki no Kyojin, Na Honjaman Level Up, Quanzhi Gaoshou)</string>
    <string name="use_media_native_name_format">Use Native name (ex: 進撃の巨人, 나 혼자만 레벨업, 全职高手)</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="send_airing_push_notifications">Send Airing push notifications</string>
    <string name="send_activity_push_notifications">Send Activity push notifications</string>
    <string name="error">Error</string>
    <string name="send_forum_push_notifications">Send Forum push notifications</string>
    <string name="send_follows_push_notifications">Send Follows push notifications</string>
    <string name="send_relations_push_notifications">Send Media push notifications</string>
    <string name="merge_activity_forum_follows_and_relations_push_notifications_into_one">Merge Activity, Forum, Follows, and Media push notifications into one</string>
    <string name="show_push_notifications_not_earlier_than_every">Show push notifications not earlier than every</string>
    <string name="important_to_know_n1_push_notifications_will_show_up_periodically_not_real_time_n2_depending_on_your_rom_and_phone_setting_it_might_not_show_up_at_all_reference_https_dontkillmyapp_com">Important to know:\n1. Push notifications will show up periodically, not real time.\n2. Depending on your ROM and phone setting, it might not show up at all. (reference: https://dontkillmyapp.com/)</string>
    <string name="memory_saver">Memory Saver</string>
    <string name="use_the_highest_quality_image">Use the highest quality image</string>
    <string name="enable_social_feature">Enable Social feature</string>
    <string name="show_bio_automatically">Show Bio automatically</string>
    <string name="these_features_are_not_suitable_for_devices_with_limited_memory_it_is_recommended_to_uncheck_all_for_better_performance_and_stability_sorry_for_the_inconvenience">These features are not suitable for devices with limited memory. It is recommended to uncheck all for better performance and stability. Sorry for the inconvenience.</string>
    <string name="all_the_configurations_here_only_applies_to_al_chan_and_will_not_affect_the_website_anilist_co">All the configurations here only applies to AL-chan and will not affect the website anilist.co.</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="the_app_will_be_restarted_to_apply_the_change">"The app will be restarted to apply the change."</string>
    <string name="reset">Reset</string>
    <string name="anime_list">Anime List</string>
    <string name="manga_list">Manga List</string>
    <string name="plus_one_ch">+1 CH</string>
    <string name="plus_one_ep">+1 EP</string>
    <string name="plus_one_vo">+1 VO</string>
    <string name="ep_x_on_y">Ep. %1$d on %2$s.</string>
    <string name="ep_x_in_y">Ep. %1$d in %2$s.</string>
    <string name="you_are_x_behind">You are %1$s behind.</string>
    <string name="title_language">Title Language</string>
    <string name="default_media_title_language">Default media title language</string>
    <string name="activity_merge_time">Activity Merge Time</string>
    <string name="progress_activity_created_within_this_time_period_will_be_merged_together">Progress activity created within this time period will be merged together</string>
    <string name="_18_content">18+ Content</string>
    <string name="show_18_content_because_i_m_a_responsible_adult">Show 18+ content because I\'m a responsible adult</string>
    <string name="receive_airing_anime_notifications">Receive airing anime notifications</string>
    <string name="always">Always</string>
    <string name="never">Never</string>
    <string name="settings_saved">Settings saved</string>
    <string name="scoring">Scoring</string>
    <string name="scoring_system">Scoring system</string>
    <string name="default_list_order">Default list order</string>
    <string name="split_anime_completed_list_section_by_format">Split Anime completed list section by format</string>
    <string name="split_manga_completed_list_section_by_format">Split Manga completed list section by format</string>
    <string name="use_advanced_scoring">Use advanced scoring</string>
    <string name="advanced_scoring_criteria">Advanced Scoring Criteria</string>
    <string name="custom_anime_lists">Custom Anime Lists</string>
    <string name="custom_manga_lists">Custom Manga Lists</string>
    <string name="add_more">Add more</string>
    <string name="total_anime">Total Anime</string>
    <string name="total_manga">Total Manga</string>
    <string name="episodes_watched">Episodes Watched</string>
    <string name="days_watched">Days Watched</string>
    <string name="anime_mean_score">Anime Mean Score</string>
    <string name="chapters_read">Chapters Read</string>
    <string name="manga_mean_score">Manga Mean Score</string>
    <string name="volumes_read">Volumes Read</string>
    <string name="view_detail_statistics">View Detail Statistics</string>
    <string name="activity">Activity</string>
</resources>