<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/itemHome"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        android:orderInCategory="0"/>
    <item android:id="@+id/itemAnime"
        android:icon="@drawable/ic_cinema"
        android:title="@string/anime"
        android:orderInCategory="1"/>
    <item android:id="@+id/itemManga"
        android:icon="@drawable/ic_book"
        android:title="@string/manga"
        android:orderInCategory="2"/>
    <item android:id="@+id/itemSocial"
        android:icon="@drawable/ic_chat"
        android:title="@string/social"
        android:orderInCategory="3"/>
    <item android:id="@+id/itemProfile"
        android:icon="@drawable/ic_person"
        android:title="@string/profile"
        android:orderInCategory="4"/>
</menu>