<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/itemActivity"
        android:title="@string/activity"
        android:icon="@drawable/ic_chat_bubble"
        app:showAsAction="always"/>
    <item android:id="@+id/itemNotifications"
        android:title="@string/notifications"
        android:icon="@drawable/ic_notification"
        app:actionLayout="@layout/layout_custom_notification"
        app:showAsAction="always"/>
    <item android:id="@+id/itemSettings"
        android:title="@string/settings"
        app:showAsAction="never"/>
    <item android:id="@+id/itemViewOnAniList"
        android:title="@string/view_on_anilist"
        app:showAsAction="never"/>
    <item android:id="@+id/itemShareProfile"
        android:title="@string/share_profile"
        app:showAsAction="never"/>
</menu>