<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.LoginFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/loginBackgroundImage"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <View
        android:background="@drawable/background_gradient_two"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginContentRoot"
        android:padding="@dimen/marginPageBig"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:gravity="center_vertical"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:text="@string/app_name"
                    style="?themeAppNameFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.textview.MaterialTextView
                    android:text="@string/powered_by_anilist"
                    style="?themeSmallFont"
                    android:layout_marginTop="@dimen/marginClose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="0dp"/>

<!--            TODO: readd back for dev -->
            <com.google.android.material.textview.MaterialTextView
                android:visibility="gone"
                android:id="@+id/loginEnterAsGuestButton"
                android:text="@string/login_as_guest"
                style="?themeRegularClickableFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:text="@string/important_to_know"
                style="?themeTitleFont"
                android:layout_marginBottom="@dimen/marginSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/loginNoticeText"
                android:text="@string/you_ll_be_redirected_to_anilist_co_to_login_register_make_sure_the_url_is_anilist_co_before_entering_your_email_and_password"
                style="?themeRegularFont"
                android:layout_marginBottom="@dimen/marginFar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginRegisterButton"
                    android:text="@string/register"
                    style="?themePrimaryBorderButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <View
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginButton"
                    android:text="@string/login"
                    style="?themePrimaryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/layout_loading"
        android:id="@+id/loadingLayout"/>

</androidx.constraintlayout.widget.ConstraintLayout>